fix: fixed parse to list